--- a/ClinicaVeterinaria/Views/Armadietti/Create.cshtml
+++ b/ClinicaVeterinaria/Views/Armadietti/Create.cshtml
@@ -4,28 +4,24 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Aggiungi Armadietto</h1>
 
-<h4>Armadietti</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="Descrizione" class="control-label"></label>
                 <input asp-for="Descrizione" class="form-control" />
                 <span asp-validation-for="Descrizione" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Aggiungi" class="btn btn-success me-2" />
+                <a class="btn btn-outline-success me-2" asp-action="Index">Lista Armadietti</a>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
