--- a/ClinicaVeterinaria/Views/Armadietti/Delete.cshtml
+++ b/ClinicaVeterinaria/Views/Armadietti/Delete.cshtml
@@ -4,25 +4,24 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Elimina Armadietto</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Sei sicuro di voler eliminare questo armadietto?</h3>
 <div>
-    <h4>Armadietti</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Descrizione)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-10 mb-3">
             @Html.DisplayFor(model => model.Descrizione)
         </dd>
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="IdArmadietto" />
-        <input type="submit" value="Delete" class="btn btn-danger" onclick="return confirmDelete()" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Elimina" class="btn btn-danger" onclick="return confirmDelete()" /> |
+        <a class="btn btn-outline-success me-2" asp-action="Index">Lista Armadietti</a>
     </form>
 </div>
 @section Scripts {
