--- a/ClinicaVeterinaria/Views/Armadietti/Details.cshtml
+++ b/ClinicaVeterinaria/Views/Armadietti/Details.cshtml
@@ -4,21 +4,20 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Dettagli Armadietto</h1>
 
 <div>
-    <h4>Armadietti</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Descrizione)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-10 mb-3">
             @Html.DisplayFor(model => model.Descrizione)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.IdArmadietto">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a class="btn btn-success me-2" asp-action="Edit" asp-route-id="@Model?.IdArmadietto">Modifca</a> |
+    <a class="btn btn-outline-success" asp-action="Index">Lista Armadietti</a>
 </div>
