--- a/ClinicaVeterinaria/Views/Cassettis/Delete.cshtml
+++ b/ClinicaVeterinaria/Views/Cassettis/Delete.cshtml
@@ -4,11 +4,10 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Elimina Cassetto</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Sei sicuro di voler eliminare questo cassetto?</h3>
 <div>
-    <h4>Cassetti</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -27,7 +26,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="IdCassetto" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Elimina" class="btn btn-danger" /> |
+        <a class="btn btn-outline-success me-2" asp-action="Index">Lista Cassetti</a>
     </form>
 </div>
