--- a/ClinicaVeterinaria/Views/Prodotti/Index.cshtml
+++ b/ClinicaVeterinaria/Views/Prodotti/Index.cshtml
@@ -17,9 +17,6 @@
         <button type="submit" class="btn btn-outline-success ms-3 mb-3">Cerca</button>
     </div>
 </form>
-<p class="mb-0 text-end">
-    <a class="btn btn-success" asp-action="Create">Aggiungi Prodotto</a>
-</p>
 
 <div class="row mb-3">
     @foreach (var item in Model)
@@ -33,11 +30,15 @@
                     <p class="card-text">Medicinale: @item.IsMedicinale</p>
                   @*   <p class="card-text">Possibili Usi: @item.PossibiliUsi</p>
                     <p class="card-text">Fornitore: @item.IdDittaFornitriceNavigation.NomeDitta</p> *@
-                    <a class="btn btn-sm btn-success me-2" asp-action="Edit" asp-route-id="@item.IdProdotto">Modifica</a>
-                    <a class="btn btn-sm btn-outline-success me-2" asp-action="Details" asp-route-id="@item.IdProdotto">Dettagli</a>
-                    <a class="btn btn-sm btn-danger" asp-action="Delete" asp-route-id="@item.IdProdotto">Elimina</a>
+                    <div class="text-center mb-1">
+                        <a class="btn btn-sm btn-success me-2" asp-action="Edit" asp-route-id="@item.IdProdotto">Modifica</a>
+                        <a class="btn btn-sm btn-outline-success me-2" asp-action="Details" asp-route-id="@item.IdProdotto">Dettagli</a>
+                        <a class="btn btn-sm btn-danger" asp-action="Delete" asp-route-id="@item.IdProdotto">Elimina</a>
+                    </div>
+                    <div class="text-center">
+                        <a asp-controller="Prodotti" asp-action="AggiungiAlCarrello" asp-route-idProdotto="@item.IdProdotto" class="btn btn-sm btn-outline-success">Aggiungi al carrello</a>
+                    </div>
                 </div>
-                <a asp-controller="Prodotti" asp-action="AggiungiAlCarrello" asp-route-idProdotto="@item.IdProdotto" class="btn btn-primary"> aggiungi al carrello </a>
             </div>
         </div>
     }
