--- a/ClinicaVeterinaria/Views/Admin/BackOffice.cshtml
+++ b/ClinicaVeterinaria/Views/Admin/BackOffice.cshtml
@@ -238,7 +238,7 @@
                     <td>@ricovero.DataInizioRicovero.ToString("dd/MM/yyyy")</td>
                     <td>@ricovero.DataFinericovero?.ToString("dd/MM/yyyy")</td>
                     <td>@ricovero.PrezzoGiornalieroRicovero</td>
-                    <td>@ricovero.IdanimaleNavigation?.NomeAnimale</td>
+                    <td>@ricovero.IdAnimaleNavigation?.NomeAnimale</td>
                     <td>
                         <!-- Azioni per modificare o cancellare il ricovero -->
                     </td>
