--- a/ClinicaVeterinaria/Views/Ricoveri/Details.cshtml
+++ b/ClinicaVeterinaria/Views/Ricoveri/Details.cshtml
@@ -46,10 +46,10 @@
             @Html.DisplayFor(model => model.PrezzoTotaleRicovero)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IdanimaleNavigation)
+            @Html.DisplayNameFor(model => model.IdAnimaleNavigation)
         </dt>
         <dd class="col-sm-10 mb-3">
-            @Html.DisplayFor(model => model.IdanimaleNavigation.IdAnimale)
+            @Html.DisplayFor(model => model.IdAnimaleNavigation.IdAnimale)
         </dd>
     </dl>
 </div>
