--- a/ClinicaVeterinaria/Views/Ricoveri/Edit.cshtml
+++ b/ClinicaVeterinaria/Views/Ricoveri/Edit.cshtml
@@ -18,9 +18,9 @@
                 <span asp-validation-for="Dataregistrazionericovero" class="text-danger"></span>
             </div>
             <div class="form-group mb-3">
-                <label asp-for="Idanimale" class="control-label"></label>
-                <select asp-for="Idanimale" class="form-control" asp-items="ViewBag.Idanimale"></select>
-                <span asp-validation-for="Idanimale" class="text-danger"></span>
+                <label asp-for="IdAnimale" class="control-label"></label>
+                <select asp-for="IdAnimale" class="form-control" asp-items="ViewBag.Idanimale"></select>
+                <span asp-validation-for="IdAnimale" class="text-danger"></span>
             </div>
             <div class="form-group mb-3">
                 <label asp-for="DataInizioRicovero" class="control-label"></label>
