--- a/ClinicaVeterinaria/Views/Home/Index.cshtml
+++ b/ClinicaVeterinaria/Views/Home/Index.cshtml
@@ -49,10 +49,13 @@
 
 <div class="contaienr">
     <div class="row">
-        <div class="col-6">
-            <button id="findAnimalbyMicroChip" class="btn btn-login">Cerca animale per microchip</button>
-            <input id="inputInserisciNumMicro" type="text" />
-            <p id="infoOutput"></p>
+        <div class="col-12">
+            <div>
+				<button id="findAnimalbyMicroChip" class="btn btn-login">Cerca animale per microchip</button>
+				<input id="inputInserisciNumMicro" type="text" />
+				<p id="infoOutput"></p>
+            </div>
+         
         </div>
         <div class="col-6">
             <div id="containerBello"></div>
