--- a/ClinicaVeterinaria/Views/Ricoveri/Create.cshtml
+++ b/ClinicaVeterinaria/Views/Ricoveri/Create.cshtml
@@ -17,8 +17,8 @@
                 <span asp-validation-for="Dataregistrazionericovero" class="text-danger"></span>
             </div>
             <div class="form-group mb-3">
-                <label asp-for="Idanimale" class="control-label"></label>
-                <select asp-for="Idanimale" class ="form-control" asp-items="ViewBag.Idanimale"></select>
+                <label asp-for="IdAnimale" class="control-label"></label>
+                <select asp-for="IdAnimale" class ="form-control" asp-items="ViewBag.Idanimale"></select>
             </div>
             <div class="form-group mb-3">
                 <label asp-for="DataInizioRicovero" class="control-label"></label>
