Bottone home cerca animale modificato

--- a/ClinicaVeterinaria/Views/Home/Index.cshtml
+++ b/ClinicaVeterinaria/Views/Home/Index.cshtml
@@ -47,10 +47,12 @@
     </div>
 </div>
 
-<div class="contaienr">
+<hr/>
+
+<div class="contaienr mt-5">
     <div class="row">
-        <div class="col-6">
-            <button id="findAnimalbyMicroChip" class="btn btn-login">Cerca animale per microchip</button>
+        <div class="col-12 d-flex justify-content-center">
+            <button id="findAnimalbyMicroChip" class="btn btn-login me-1">Cerca animale per microchip</button>
             <input id="inputInserisciNumMicro" type="text" />
             <p id="infoOutput"></p>
         </div>
