--- a/ClinicaVeterinaria/Views/Ricoveri/Index.cshtml
+++ b/ClinicaVeterinaria/Views/Ricoveri/Index.cshtml
@@ -33,7 +33,7 @@
                 @Html.DisplayNameFor(model => model.PrezzoTotaleRicovero)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.IdanimaleNavigation)
+                @Html.DisplayNameFor(model => model.IdAnimaleNavigation)
             </th>
             <th></th>
         </tr>
@@ -59,15 +59,22 @@
             <td>
                 @Html.DisplayFor(modelItem => item.PrezzoTotaleRicovero)
             </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.IdanimaleNavigation.IdAnimale)
-            </td>
-            <td>
-                <a class="btn btn-sm btn-info me-2 mb-2" asp-action="Edit" asp-route-id="@item.IdRicovero">Modifica</a>
-                <a class="btn btn-sm btn-outline-info me-2" asp-action="Details" asp-route-id="@item.IdRicovero">Dettagli</a>
-                <a class="btn btn-sm btn-danger" asp-action="Delete" asp-route-id="@item.IdRicovero">Elimina</a>
-            </td>
-        </tr>
-}
+                <td>
+                    @Html.DisplayFor(modelItem => item.IdAnimaleNavigation.NomeAnimale)
+                </td>
+                <td>
+                    <a class="btn btn-sm btn-info me-2 mb-2" asp-action="Edit" asp-route-id="@item.IdRicovero">Modifica</a>
+                    <a class="btn btn-sm btn-outline-info me-2" asp-action="Details" asp-route-id="@item.IdRicovero">Dettagli</a>
+                    <a class="btn btn-sm btn-danger me-2" asp-action="Delete" asp-route-id="@item.IdRicovero">Elimina</a>
+                    @if (item.IsRicoveroAttivo)
+                    {
+                        <form asp-action="Dismetti" method="post" class="d-inline">
+                            <input type="hidden" name="id" value="@item.IdRicovero" />
+                            <button type="submit" class="btn btn-sm btn-warning">Dismetti</button>
+                        </form>
+                    }
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
