--- a/ClinicaVeterinaria/Views/Admin/BackOffice.cshtml
+++ b/ClinicaVeterinaria/Views/Admin/BackOffice.cshtml
@@ -39,7 +39,16 @@
                         <tr>
                             <td>@utente.Nome</td>
                             <td>@utente.Cognome</td>
-                            <td>@utente.IdRuoloNavigation.NomeRuolo</td>
+                        <td>
+                            @if (utente.IdRuoloNavigation != null)
+                            {
+                                @utente.IdRuoloNavigation.NomeRuolo
+                            }
+                            else
+                            {
+                                <span>Non Assegnato</span>
+                            }
+                        </td>
                             <td>
                                 @if (utente.IdUtente.ToString() != Model.CurrentUserId)
                                 {
@@ -238,7 +247,7 @@
                     <td>@ricovero.DataInizioRicovero.ToString("dd/MM/yyyy")</td>
                     <td>@ricovero.DataFinericovero?.ToString("dd/MM/yyyy")</td>
                     <td>@ricovero.PrezzoGiornalieroRicovero</td>
-                    <td>@ricovero.IdanimaleNavigation?.NomeAnimale</td>
+                    <td>@ricovero.IdAnimaleNavigation?.NomeAnimale</td>
                     <td>
                         <!-- Azioni per modificare o cancellare il ricovero -->
                     </td>
