--- a/ClinicaVeterinaria/Views/Home/Index.cshtml
+++ b/ClinicaVeterinaria/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
     ViewData["Title"] = "Homepage";
 }
 
-<div class="container-fluid">
+<div class="container">
     <div class="row">
         <div class="col-md-6 text-center">
             <div class="jumbotron jumbotron-fluid home">
