--- a/ClinicaVeterinaria/Views/Armadietti/Index.cshtml
+++ b/ClinicaVeterinaria/Views/Armadietti/Index.cshtml
@@ -15,27 +15,32 @@
     @foreach (var item in Model)
     {
         <div class="col-md-3 mb-4">
-            <div class="card farm">
+            <div class="card">
                 <div class="card-body">
                     <img src="/images/extra/Screenshot 2024-03-20 170552.png" class="card-img-top" alt="armadietto">
-                    <h5 class="card-title">@Html.DisplayFor(modelItem => item.Descrizione)</h5>
-                    <p class="card-text">
+                    <h5 class="card-title text-center">@Html.DisplayFor(modelItem => item.Descrizione)</h5>
+                    <p class="card-text text-center">
                         <!-- Aggiungi altre informazioni qui se necessario -->
                     </p>
 
 
                     @if (User.IsInRole("Farmacista") || User.IsInRole("Admin"))
                     {
-                        <a href="@Url.Action("Edit", new { id = item.IdArmadietto })" class="btn btn-success me-2">Modifica</a>
-                        <a href="@Url.Action("Details", new { id = item.IdArmadietto })" class="btn btn-outline-success me-2">Dettagli</a>
-                        <a href="@Url.Action("Delete", new { id = item.IdArmadietto })" class="btn btn-danger me-2" onclick="return confirmDelete();">Elimina</a>
-                        @Html.ActionLink("Cassetto", "Index", "Cassettis", new { id = item.IdArmadietto, @class = "btn btn-outline-success" }, null)
+                        <div class="text-center">
+                            <a href="@Url.Action("Edit", new { id = item.IdArmadietto })" class="btn btn-success me-2">Modifica</a>
+                            <a href="@Url.Action("Details", new { id = item.IdArmadietto })" class="btn btn-outline-success me-2">Dettagli</a>
+                            <a href="@Url.Action("Delete", new { id = item.IdArmadietto })" class="btn btn-danger me-2" onclick="return confirmDelete();">Elimina</a>
+                            @Html.ActionLink("Cassetto", "Index", "Cassettis", null, new { id = item.IdArmadietto, @class = "btn btn-outline-success" })
+                        </div>
+
                     }
                     @if (User.IsInRole("Veterinario"))
                     {
-                        @Html.ActionLink("Cassetto", "Index", "Cassettis", new { id = item.IdArmadietto, @class = "btn btn-info" }, null)
-                        <a href="@Url.Action("Details", new { id = item.IdArmadietto })" class="btn btn-outline-success">Dettagli</a>
-                        <a href="@Url.Action("Delete", new { id = item.IdArmadietto })" class="btn btn-danger" onclick="return confirmDelete();">Elimina</a>
+                        <div class="text-center">
+                            <a href="@Url.Action("Details", new { id = item.IdArmadietto })" class="btn btn-outline-success">Dettagli</a>
+                            <a href="@Url.Action("Delete", new { id = item.IdArmadietto })" class="btn btn-danger" onclick="return confirmDelete();">Elimina</a>
+                            @Html.ActionLink("Cassetto", "Index", "Cassettis", null, new { id = item.IdArmadietto, @class = "btn btn-outline-success" })
+                        </div>
                     }
                 </div>
             </div>
