--- a/ClinicaVeterinaria/Views/Cassettis/Index.cshtml
+++ b/ClinicaVeterinaria/Views/Cassettis/Index.cshtml
@@ -16,20 +16,21 @@
     @foreach (var item in Model)
     {
         <div class="col-md-4 mb-4">
-            <div class="card farm">
+            <div class="card">
                 <img src="/images/extra/Screenshot 2024-03-21 094010.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">@Html.DisplayFor(modelItem => item.Descrizione)</h5>
+                    <h5 class="card-title text-center">@Html.DisplayFor(modelItem => item.Descrizione)</h5>
                     <p class="card-text">Id Armadietto: @Html.DisplayFor(modelItem => item.IdArmadiettoNavigation.IdArmadietto)</p>
-                    <a href="@Url.Action("Edit", new { id = item.IdCassetto })" class="btn btn-success me-2">Modifica</a>
-                    <a href="@Url.Action("Details", new { id = item.IdCassetto })" class="btn btn-outline-success me-2">Dettagli</a>
-                    <a href="@Url.Action("Delete", new { id = item.IdCassetto })" class="btn btn-danger me-2">Elimina</a>
-          @*           @Html.ActionLink("Prodotti", "Prodotti", "Index", new { id = item.IdCassetto }, null) *@
-                    <a class="btn btn-outline-success" asp-action="GetArmadiettiWithCassetti" asp-controller="Prodotti" asp-route-id="@item.IdCassetto">Prodotti</a>
+                    <div class="text-center">
+                        <a href="@Url.Action("Edit", new { id = item.IdCassetto })" class="btn btn-success me-2">Modifica</a>
+                        <a href="@Url.Action("Details", new { id = item.IdCassetto })" class="btn btn-outline-success me-2">Dettagli</a>
+                        <a href="@Url.Action("Delete", new { id = item.IdCassetto })" class="btn btn-danger me-2">Elimina</a>
+                        @*           @Html.ActionLink("Prodotti", "Prodotti", "Index", new { id = item.IdCassetto }, null) *@
+                        <a class="btn btn-outline-success mt-1" asp-action="GetArmadiettiWithCassetti" asp-controller="Prodotti" asp-route-id="@item.IdCassetto">Prodotti</a>
+                    </div>
                 </div>
             </div>
         </div>
     }
 </div>
-
                     
