--- a/ClinicaVeterinaria/Views/Shared/_Layout.cshtml
+++ b/ClinicaVeterinaria/Views/Shared/_Layout.cshtml
@@ -149,6 +149,7 @@
     </header>
     <div class="container">
         <main role="main" class="pb-3">
+            <partial name="_notifications"/>
             @RenderBody()
         </main>
     </div>
